# thicknessbreadth

./: CMakeLists.txt  README.md
data/: Buddha200.pgm  Casting200.pgm  Filigree200.pgm  Greek200.pgm
src/: binobject.cpp  binobject.h  main.cpp
tools/: README.md  binvox2pgm  binvox2pgm.cpp  pgm2obj  script_paper.sh  script_tb_pairs.sh  tb-balls.py  tb-diag.py
